--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@vitejs/plugin-vue": "~4.0.0",
     "@vitejs/plugin-vue-jsx": "~3.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "autoprefixer": "^10.4.13",
     "commitizen": "~4.2.6",
     "conventional-changelog-cli": "~2.2.2",
     "cross-env": "~7.0.3",
@@ -91,6 +92,7 @@
     "stylelint-config-recommended-vue": "~1.4.0",
     "stylelint-config-standard": "~29.0.0",
     "stylelint-order": "~5.0.0",
+    "tailwindcss": "^3.2.4",
     "terser": "~5.16.1",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.4",
